# spn-compiler

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CudaToolkit.cmake  Doxygen.cmake  LICENSE  README.md  README_SLP.md  THIRD_PARTY  build.gradle  changes.md  compile_fpga.py  configure-circt.sh  configure-old-cf15.sh  configure-old.sh  configure.sh  hello.txt  mini-example.mlir  mini-example_blockargs.mlir  mini-example_blockargs_only.mlir  parser-grammar.txt  run_all.py  run_cocotb.py  run_cocotb_mapper.py  run_cocotb_mapper_xspn.py  run_cocotb_registerfile.py  settings.gradle  setup.sh  speaker.mlir  wrap-clang-tidy.sh.in
common/: CMakeLists.txt  TargetExecutionModel.cpp
common/include/: CLI11.hpp  Kernel.h  TargetExecutionModel.h  config.hpp
common/include/util/: Logging.h
compiler/: CMakeLists.txt  CudaToolkit.cmake  DetectCUDALibs.cmake
compiler-rt/: CMakeLists.txt  LLVMBitcodeLib.cmake
compiler-rt/include/: spn-compiler-rt.hpp  spn-fixed.hpp  spn-fp.hpp  spn-lns-sw.hpp  spn-lns.hpp  spn-posit.hpp
compiler-rt/include/posit/: README
compiler-rt/src/: trace.cpp
compiler/include/: spnc.h
compiler/include/driver/: Actions.h  BaseActions.h  GlobalOptions.h  Job.h  Kernel.h  Options.h
compiler/include/graph-ir/: GraphIRContext.h  GraphIRNode.h  IRGraph.h
compiler/include/util/: Command.h  FileSystem.h  Logging.h
compiler/src/: Driver.cpp
compiler/src/driver/: Kernel.cpp
compiler/src/graph-ir/: Gauss.cpp  GraphIRNode.cpp  GraphIRNode.h  Histogram.cpp  InputVar.cpp  Product.cpp  Sum.cpp  WeightedSum.cpp
compiler/src/ipu/: IPUSubtarget.cpp  IPUSubtarget.h  IPUTargetExecutionModel.h  IPUTargetInfo.cpp  IPUTargetInfo.h  IPUTargetLowering.cpp  IPUTargetLowering.h  IPUTargetMachine.cpp  IPUTargetMachine.h
compiler/src/json/: Parser.cpp  Parser.h
compiler/src/option/: CMakeLists.txt  GlobalOptions.cpp  GlobalOptions.h  Options.cpp  Options.h  Options.td
compiler/src/option_old/: GlobalOptions.cpp  GlobalOptions.h
compiler/src/pipeline/: BasicSteps.h  Pipeline.cpp  Pipeline.h  PipelineContext.h  PipelineStep.h
compiler/src/toolchain/: CIRCTToolchain.cpp  CIRCTToolchain.h  CPUToolchain.cpp  CPUToolchain.h  CUDAGPUToolchain.cpp  CUDAGPUToolchain.h  FPGAToolchain.cpp  FPGAToolchain.h  IPUToolchain.cpp  IPUToolchain.h  MLIRToolchain.cpp  MLIRToolchain.h
compiler/src/transform/: AlternatingNodesTransform.cpp  AlternatingNodesTransform.h  BaseVisitor.cpp  BaseVisitor.h  BinaryTreeTransform.cpp  BinaryTreeTransform.h  ExecOrderProducer.cpp  ExecOrderProducer.h  IRTransformationPass.cpp  IRTransformationPass.h  Visitor.h
compiler/src/util/: Command.h  DotVisitor.cpp  DotVisitor.h  FileSystem.h  GraphIRTools.cpp  GraphIRTools.h  GraphStatVisitor.cpp  GraphStatVisitor.h  Logging.cpp
compiler/test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
compiler/test/canonicalize/: const_fold_product_small.mlir  reduce_product_small.mlir  reduce_sum_small.mlir  reduce_weighted_sum_small.mlir
compiler/test/simplify/: binarize_NAry_product_small.mlir  binarize_weighted_sum_small.mlir  split_weighted_sum_small.mlir
compiler/test/testdata/: NIPS10.json  NIPS5.json
execute/: CMakeLists.txt
execute/examples/: dynamic-load.cpp  mini-example.json
execute/resources/: main.cpp
execute/src/: main.cpp
lo2hw/: CMakeLists.txt  conversion.cpp  conversion.hpp  lo2hw.cpp  lo2hwPass.cpp  lo2hwPass.h  mlirgen.cpp  mlirgen.hpp  rewrite.cpp  rewrite.hpp
mlir/: CMakeLists.txt  dialect-design.md
mlir-dialects/: CMakeLists.txt
mlir-dialects/include/SPN/: CMakeLists.txt  SPNDialect.h  SPNOps.td
mlir-dialects/lib/SPN/: CMakeLists.txt  SPNDialect.cpp  SPNOps.cpp
mlir-dialects/test/: CMakeLists.txt
mlir-dialects/tools/spnc-opt/: CMakeLists.txt  spnc-opt.cpp
mlir/include/: CMakeLists.txt
mlir/include/Conversion/: CMakeLists.txt
mlir/include/Dialect/: CMakeLists.txt
mlir/lib/: CMakeLists.txt
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Dialect/: CMakeLists.txt
mlir/test/: CMakeLists.txt  lit.cfg  lit.cfg.py  lit.site.cfg.in  lit.site.cfg.py.in  regenerate_tests.py
mlir/test/analysis/: hispn-arithmetic-precision.mlir
mlir/test/lo2hw/: test.mlir
mlir/test/test-resources/: NIPS10.json  NIPS5.json
mlir/tools/: CMakeLists.txt
mlir/tools/spnc-opt/: CMakeLists.txt  spnc-opt.cpp
python-interface/: .gitignore  CMakeLists.txt  compile_fpga.py  requirements.txt  setup.py.in
python-interface/evaluation/: collect_plots.py  cpuExecutionSlurm.py  generate_slurm_array.py  invoke.py  lo_spn_sizes_all.csv  plots_collection.py  run_normal.py
python-interface/spnc/: CPUCompiler.py  __init__.py  cpu.py  fpga.py  gpu.py
python-interface/spncpy/: __init__.py
python-interface/src/: python-interface.cpp
python-interface/test/: run_all.py  test-gpu-gaussian.py  test-log-nips5.py  test-log-vector-categorical.py  test-log-vector-gaussian.py  test-log-vector-histogram.py  test-marginal-categorical.py  test-marginal-gaussian.py  test-marginal-gpu.py  test-marginal-log.histogram.py  test-nips5.py  test-single-joint-execution.py  test-slp-vectorized-consecutive.py  test-slp-vectorized-escaping.py  test-slp-vectorized-mini.py  test-slp-vectorized-speaker.py  test-slp-vectorized-tree.py  test-vectorized-categorical.py  test-vectorized-gaussian.py  test-vectorized-histogram.py  test.py
python-interface/test/cpu/: test_cpu_categorical.py  test_cpu_gaussian.py  test_cpu_histogram.py  test_cpu_out_of_bounds.py  test_cpu_transformation_categorical_to_select.py  test_cpu_transformation_histogram_to_select.py  test_graph_partitioning.py  test_marginal_cpu_categorical.py  test_marginal_cpu_gaussian.py  test_marginal_cpu_histogram.py  test_marginal_cpu_transformation_to_select.py
python-interface/test/cuda/: test_cuda_categorical.py  test_cuda_gaussian.py  test_cuda_histogram.py  test_cuda_marginal.py  test_marginal_cuda_categorical.py  test_marginal_cuda_gaussian.py  (+2 more)
runtime/: CMakeLists.txt
runtime/include/: Kernel.h  runtime.h  spnc-runtime.h
runtime/src/: Executable.cpp  Executable.h  Kernel.cpp  runtime.cpp
runtime/wrappers/: CMakeLists.txt
(+972 files in other folders)
